# vultan

./: Cargo.toml  README.md
src/: application_state.rs  lib.rs  main.rs  state.rs
src/application_state/: card.rs  deck.rs  hand.rs
src/application_state/card/: parser.rs  revision_settings.rs  score.rs  text_file.rs
src/application_state/hand/: shuffle.rs
src/state/: card.rs  deck.rs  file.rs  hand.rs  tools.rs
src/state/card/: parser.rs  revision_settings.rs  score.rs
src/state/deck/: interval_coefficients.rs
src/state/hand/: shuffle.rs
tests/res/: card-a.md  card-b.md  card-c.md  malformed-answer.md  malformed-decks.md  malformed-question.md
