[package]
name = "vultan"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Chanquion <{FORENAME}.{FIRST_FIVE_LETTERS_OF_SURNAME}.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
mockall = "0.11"
mockall_double = "0.3.0"
rand = "0.8.5"
regex = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
snafu = "0.7.2"

[dev-dependencies]
len-trait = "0.6"
rstest = "0.15"
