[package]
name = "vultan"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Chanquion <{FORENAME}.{FIRST_FIVE_LETTERS_OF_SURNAME}.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = {version = "0.4", features = ["serde"]}
custom_error = "1.9.2"
glob = "0.3.0"
itertools = "0.10.5"
rand = "0.8.5"
regex = "1"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
snafu = "0.7.2"

[dev-dependencies]
assert_fs = "1.0.7"
len-trait = "0.6"
mockall = "0.11"
mockall_double = "0.3.0"
rstest = "0.15"
