[package]
name = "vultan"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Chanquion <pierre@chanq.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow               = { version = "1.0.66" }
clap                 = { version = "4.1.4" , features = ["derive"] }
chrono               = { version = "0.4", features = ["serde"]}
crossterm            = { version = "0.28.0" }
custom_error         = { version = "1.9.2" }
glob                 = { version = "0.3.0" }
itertools            = { version = "0.10.5" }
rand                 = { version = "0.8.5" }
regex                = { version = "1" }
ron                  = { version = "0.8" }
serde                = { version = "1", features = ["derive"] }
snafu                = { version = "0.7.2" }
syntect              = { version = "5.0.0", default-features = false, features = ["default-fancy"] }
syntect-tui          = { version = "3.0" }
ratatui              = { version = "0.29" }
unicode-segmentation = { version = "1.2" }
unicode-width        = { version = "0.1" }

[dev-dependencies]
assert_fs      = { version = "1.0.7" }
len-trait      = { version = "0.6" }
mockall        = { version = "0.11" }
mockall_double = { version = "0.3.0" }
rstest         = { version = "0.15" }

[[bin]]
name = "study-cli"
path = "./src/bin/study_cli/main.rs"
test = true
